# coursework_1

./: .env.example  README.md  pyproject.toml
src/: utils.py  views.py
